Add Brave Search Engine and improve settings and error message
