# connectors/unique_search_proxy/unique_search_proxy_sdk/unique_search_proxy_sdk/_generated/models/brave_request_safesearch_type_0.py
@@ -1,0 +1,10 @@
+from enum import Enum
+
+
+class BraveRequestSafesearchType0(str, Enum):
+    MODERATE = "moderate"
+    OFF = "off"
+    STRICT = "strict"
+
+    def __str__(self) -> str:
+        return str(self.value)
