# connectors/unique_search_proxy/unique_search_proxy_sdk/unique_search_proxy_sdk/_generated/models/brave_request_units_type_0.py
@@ -1,0 +1,9 @@
+from enum import Enum
+
+
+class BraveRequestUnitsType0(str, Enum):
+    IMPERIAL = "imperial"
+    METRIC = "metric"
+
+    def __str__(self) -> str:
+        return str(self.value)
